# simsearchserver

./: .gitignore  Cargo.toml  README.md  build_config.yaml  sanitize.py
builder/: Cargo.toml
builder/src/: main.rs
kd_tree/: Cargo.toml
kd_tree/src/: error.rs  io.rs  layout.rs  lib.rs  node.rs  page.rs  tree.rs
kd_tree/test_data/: small_random_descriptors.txt
python_web_server/: embedding.py  main.py  rust_query.py  smiles.py
python_web_server/models/: models.yaml
python_web_server/smallsa/: contra_seq_dataset.py  modules.py  utils.py
python_web_server/static/: error.js  molecule-card.js  options.js  single-smiles.js  style.css
python_web_server/templates/: index.html
query_test/: Cargo.toml
query_test/src/: main.rs
rust_server/: build_config.yaml
rust_server/builder/: Cargo.toml  test_full_data.csv
rust_server/builder/src/: main.rs
rust_server/kd_tree/: Cargo.toml
rust_server/kd_tree/src/: data.rs  database.rs  decision_tree.rs  io.rs  layout.rs  lib.rs  node.rs  page.rs  tree.rs
rust_server/query_test/src/: main.rs
rust_server/server/: Cargo.toml
rust_server/server/src/: main.rs
salsa_server/: Cargo.toml  env.yml  main.py  run_flask.sh
salsa_server/model/: Cargo.toml
salsa_server/model/src/: main.rs
salsa_server/modeling/: model.py  preprocess.py
salsa_server/server/: Cargo.toml
salsa_server/server/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
tree_decomp/: tree_decomp.py  tree_decomp_dev.py
