[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
kd_tree = { path = "../kd_tree" }
hyper = {version = "0.14", features = ["full"]}
tokio = {version = "*", features = ["full"]}
bytes = "*"
rand = "*"
serde_json = "*"
serde_yaml = "*"
reqwest = "*"
clap = { version = "4.3.0", features = ["derive"] }
